# beehive

./: README.md
backend/: Cargo.toml  Dockerfile
backend/migration/: migration.sql
backend/src/: error.rs  main.rs  model.rs  route.rs
extension/: components.json  package.json  postcss.config.js  tailwind.config.js  wxt.config.ts
extension/src/api/: coupon.ts
extension/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx
extension/src/entrypoints/: background.ts  content.ts
extension/src/entrypoints/popup/: App.tsx  main.tsx
extension/src/hooks/: theme.tsx
extension/src/types/: messages.ts
extension/src/utils/: domUtils.ts  messaging.ts  pageDetection.ts
